--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.11.4",
     "apexcharts": "3.44.0",
     "axios": "^1.6.2",
+    "dayjs": "^1.11.10",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-apexcharts": "1.4.1",
